# k52

./: k52.config
examples/: CMakeLists.txt
examples/continuous_optimization/: CMakeLists.txt  main.cpp
examples/dspImfcc/: CMakeLists.txt  Imfcc.cpp  Imfcc.h  cosin_preobrasovanie.cpp  main.cpp  windows.cpp
examples/genetic_algorithm/: CMakeLists.txt
include/k52/dsp/: Imfcc.h  cosin_preobrasovanie.h  mfcc.h  windows.h
include/k52/dsp/transform/: i_fourier_transform.h
src/dsp/: CMakeLists.txt  Imfcc.cpp  cosin_preobrasovanie.cpp  mfcc.cpp  windows.cpp
